# spark-learning

./: .gitignore  README.md  learn_dataframes.ipynb  learn_import.ipynb  learn_join.ipynb  learn_rdd.ipynb  learn_sql.ipynb  learn_udf.ipynb  pyproject.toml  template.ipynb
data/: cities.csv  employees.csv  employees.tsv  employees_fto.csv  fwf_fields.yaml  people.txt  taxi_routes.json
learnspark/: app.py  parser.py  schemas.py
test/: test_parser.py  test_schemas.py
