[tool.poetry]
name = "learnspark"
version = "0.1.0"
description = ""
authors = ["Hadzariga, Nathan M <Nathan.MHadzariga@experian.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
